update: env vairable

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # 服务端api地址
-NEXT_PUBLIC_HOST="gatewaygray.gray"
+# NEXT_PUBLIC_HOST="gatewaygray.gray"
+# NEXT_PUBLIC_HOST="gatewaypre"
+NEXT_PUBLIC_HOST="gateway-outbound"
