--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "zip": "zip -r dist.zip .next package.json package-lock.json next.config.js .env.test .env"
   },
   "dependencies": {
+    "antd": "^5.24.2",
     "crypto-js": "^4.2.0",
     "next": "15.0.0",
     "otplib": "^12.0.1",
