feat: polish getLastDialogTimestamp error process

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 # NEXT_PUBLIC_HOST="gatewaygray.gray"
 # NEXT_PUBLIC_HOST="gatewaypre"
 NEXT_PUBLIC_HOST="gateway-outbound"
+
+# 应用版本信息
+NEXT_PUBLIC_APP_VERSION="0.0.21"
